Ej1 Barra de busqueda en tabla

--- a/index.html
+++ b/index.html
@@ -73,7 +73,13 @@
 
       <section id="top_mejores_juegos">
         <h1>Mejores juegos de hoy y siempre</h1>
-        <section id="table-body">
+          <div class="table-header">           
+            <div class="input-group">
+              <input type="search" placeholder="Search Data..." />
+              <img src="./img/search.png" alt="Search" />
+            </div>
+          </div>
+          <section id="table-body">
             <table>
               <thead>
                 <tr>
@@ -120,7 +126,7 @@
                 </tr>
               </tbody>
             </table>
-        </section>
+          </section>
       </section>
 
       <section id="proximos_eventos">
