Ej1 Busqueda y sort de la tabla mejores juegos

--- a/index.html
+++ b/index.html
@@ -84,45 +84,49 @@
               <thead>
                 <tr>
                   <th>ID <span class="icon-arrow">&UpArrow;</span></th>
-                  <th>Customer <span class="icon-arrow">&UpArrow;</span></th>
-                  <th>Location <span class="icon-arrow">&UpArrow;</span></th>
-                  <th>Order Date <span class="icon-arrow">&UpArrow;</span></th>
-                  <th>Status <span class="icon-arrow">&UpArrow;</span></th>
-                  <th>Amount <span class="icon-arrow">&UpArrow;</span></th>
+                  <th>Juego <span class="icon-arrow">&UpArrow;</span></th>
+                  <th>Nombre<span class="icon-arrow">&UpArrow;</span></th>
+                  <th>Año<span class="icon-arrow">&UpArrow;</span></th>
+                  <th>Rating</th>
                 </tr>
               </thead>
               <tbody>
                 <tr>
                   <td>1</td>
                   <td>
-                    <img src="./img/Controller logo.png" alt="Logo control" />
+                    <img src="./img/Juegos/The legend of zelda ocarina of time.webp" alt="Logo control" />
                   </td>
-                  <td>Chispas</td>
-                  <td>17 Dec, 2022</td>
-                  <td>
-                    <p class="status delivered">Delivered</p>
-                  </td>
-                  <td><strong>$128.5</strong></td>
+                  <td>The legend of zelda: ocarina of time</td>
+                  <td>21 Nov, 1998</td>
+                  <td><span class="star"><strong>&#9733;&#9733;&#9733;&#9733;&#9733;</strong></span></td>
                 </tr>
                 <tr>
                   <td>2</td>
-                  <td><img src="./img/Controller logo.png" alt="" /></td>
-                  <td>Chispas</td>
-                  <td>23 Aug, 2022</td>
-                  <td>
-                    <p class="status cancelled">Cancelled</p>
-                  </td>
-                  <td><strong>$50.5</strong></td>
+                  <td><img src="./img/Juegos/Tony hawk pro skater 2.webp" alt="" /></td>
+                  <td>Tony hawk pro skater 2</td>
+                  <td>19 Sep, 2000</td>
+                  <td><span class="star"><strong>&#9733;&#9733;&#9733;&#9733;&#9733;</strong></span></td>
                 </tr>
                 <tr>
                   <td>3</td>
-                  <td><img src="./img/Controller logo.png" alt="" /></td>
-                  <td>Chispas</td>
-                  <td>5 Mar, 2022</td>
-                  <td>
-                    <p class="status pending">Pending</p>
-                  </td>
-                  <td><strong>$150.5</strong></td>
+                  <td><img src="./img/Juegos/gta 4.webp" alt="" /></td>
+                  <td>Grand theft auto IV</td>
+                  <td>2 Dec, 2008</td>
+                  <td><span class="star"><strong>&#9733;&#9733;&#9733;&#9733;&#9734;</strong></span></td>
+                </tr>
+                <tr>
+                  <td>4</td>
+                  <td><img src="./img/Juegos/super mario galaxy.webp" alt="" /></td>
+                  <td>Super mario galaxy</td>
+                  <td>12 Nov, 2007</td>
+                  <td><span class="star"><strong>&#9733;&#9733;&#9733;&#9733;&#9734;</strong></span></td>
+                </tr>
+                <tr>
+                  <td>5</td>
+                  <td><img src="./img/Juegos/Red dead redemption 2.jpg" alt="" /></td>
+                  <td>Red dead redemption 2</td>
+                  <td>26 Oct, 2018</td>
+                  <td><span class="star"><strong>&#9733;&#9733;&#9733;&#9733;&#9733;</strong></span></td>
                 </tr>
               </tbody>
             </table>
