Ej1 Reseñas y comentarios

--- a/index.html
+++ b/index.html
@@ -56,19 +56,84 @@
 
       <section id="reseñas">
         <h1>Reseñas y comentarios del juego de la semana</h1>
-        <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non impedit
-          fugit perferendis facere quibusdam nulla aliquam ex repellendus
-          explicabo beatae dignissimos porro, sunt excepturi minima harum minus
-          ea ut sed? Consequat nostrud nisi ut consequat magna id consectetur et
-          minim ex proident cillum. Laboris quis enim mollit nisi officia
-          nostrud fugiat incididunt Lorem laboris ex. Nulla excepteur anim et
-          irure dolor exercitation anim eu mollit eu exercitation ullamco sint.
-          Voluptate ut sunt eiusmod do deserunt sint voluptate id eu. Dolore in
-          aute laboris duis aliqua magna aliqua cupidatat tempor voluptate
-          laborum occaecat qui. Commodo aute adipisicing proident officia sint
-          minim et irure consequat.
-        </p>
+        <div class="comments-container">
+          <h1>Comentarios</h1>
+          <ul id="comments-list" class="comments-list">
+            <li>
+              <div class="comment-main-level">
+                <!-- Avatar -->
+                <div class="comment-avatar"><img src="./img/comments/mordekaiser-chibi.webp" alt="Mordekaiser chibi"></div>
+                <!-- Contenedor del Comentario -->
+                <div class="comment-box">
+                  <div class="comment-head">
+                    <h6 class="comment-name by-author"><a href="#">Mini mordekaiser</a></h6>
+                    <span>hace 20 minutos</span>
+                    <i class="fa fa-reply"></i>
+                    <i class="fa fa-heart"></i>
+                  </div>
+                  <div class="comment-content">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit omnis animi et iure laudantium vitae, praesentium optio, sapiente distinctio illo?
+                  </div>
+                </div>
+              </div>
+              <!-- Respuestas de los comentarios -->
+              <ul class="comments-list reply-list">
+                <li>
+                  <!-- Avatar -->
+                  <div class="comment-avatar"><img src="./img/comments/baki-hanma.jpg" alt="Baki Hanma"></div>
+                  <!-- Contenedor del Comentario -->
+                  <div class="comment-box">
+                    <div class="comment-head">
+                      <h6 class="comment-name"><a href="#">Baki Hanma</a></h6>
+                      <span>hace 10 minutos</span>
+                      <i class="fa fa-reply"></i>
+                      <i class="fa fa-heart"></i>
+                    </div>
+                    <div class="comment-content">
+                      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit omnis animi et iure laudantium vitae, praesentium optio, sapiente distinctio illo?
+                    </div>
+                  </div>
+                </li>
+      
+                <li>
+                  <!-- Avatar -->
+                  <div class="comment-avatar"><img src="./img/comments/mordekaiser-chibi.webp" alt="Mordekaiser chibi"></div>
+                  <!-- Contenedor del Comentario -->
+                  <div class="comment-box">
+                    <div class="comment-head">
+                      <h6 class="comment-name by-author"><a href="#">Mini mordekaier</a></h6>
+                      <span>hace 10 minutos</span>
+                      <i class="fa fa-reply"></i>
+                      <i class="fa fa-heart"></i>
+                    </div>
+                    <div class="comment-content">
+                      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit omnis animi et iure laudantium vitae, praesentium optio, sapiente distinctio illo?
+                    </div>
+                  </div>
+                </li>
+              </ul>
+            </li>
+      
+            <li>
+              <div class="comment-main-level">
+                <!-- Avatar -->
+                <div class="comment-avatar"><img src="./img/comments/baki-hanma.jpg" alt="Baki Hanma"></div>
+                <!-- Contenedor del Comentario -->
+                <div class="comment-box">
+                  <div class="comment-head">
+                    <h6 class="comment-name"><a href="#">Baki Hanma</a></h6>
+                    <span>hace 10 minutos</span>
+                    <i class="fa fa-reply"></i>
+                    <i class="fa fa-heart"></i>
+                  </div>
+                  <div class="comment-content">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit omnis animi et iure laudantium vitae, praesentium optio, sapiente distinctio illo?
+                  </div>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <section id="top_mejores_juegos">
@@ -162,13 +227,15 @@
         </form>
         <h5>Desarrollo de pagina Play & Win &copy; 2023</h5>
       </div>
+
       <div class="RedesSociales">
         <h1>Redes sociales</h1>
         <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-        <a href="#"><i class="fab fa-twitter"></i></a>
-        <a href="#"><i class="fa-brands fa-google-plus-g"></i></a>
-        <a href="#"><i class="fab fa-linkedin-in"></i></a>
+        <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
+        <a href="#"><i class="fa-brands fa-instagram"></i></a>
+        <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
       </div>
+
     </footer>
 
     <button id="btn-ir-arriba">
