Ej1 Reseñas, Mejores Juegos y proximos eventos

--- a/index.html
+++ b/index.html
@@ -39,18 +39,17 @@
 
     <main>
       <section id="home">
-        <div class="home_banner">
-          <h1>Inicio</h1>
-          <p>
-            Consequat nostrud nisi ut consequat magna id consectetur et minim ex
-            proident cillum. Laboris quis enim mollit nisi officia nostrud
-            fugiat incididunt Lorem laboris ex. Nulla excepteur anim et irure
-            dolor exercitation anim eu mollit eu exercitation ullamco sint.
-            Voluptate ut sunt eiusmod do deserunt sint voluptate id eu. Dolore
-            in aute laboris duis aliqua magna aliqua cupidatat tempor voluptate
-            laborum occaecat qui. Commodo aute adipisicing proident officia sint
-            minim et irure consequat.
-          </p>
+        <div class="home-banner-container">
+          <div class="home-banner">
+            <h1><i>PLAY & WIN</i></h1>
+            <p>
+              Sumérgete en el emocionante universo de los videojuegos como nunca
+              antes. En Play & Win, somos apasionados por los videojuegos y
+              estamos dedicados a proporcionarte la información más actualizada,
+              reseñas imparciales y cobertura completa de los eventos más
+              emocionantes en la industria del gaming..
+            </p>
+          </div>
         </div>
       </section>
 
@@ -62,17 +61,26 @@
             <li>
               <div class="comment-main-level">
                 <!-- Avatar -->
-                <div class="comment-avatar"><img src="./img/comments/mordekaiser-chibi.webp" alt="Mordekaiser chibi"></div>
+                <div class="comment-avatar">
+                  <img
+                    src="./img/comments/mordekaiser-chibi.webp"
+                    alt="Mordekaiser chibi"
+                  />
+                </div>
                 <!-- Contenedor del Comentario -->
                 <div class="comment-box">
                   <div class="comment-head">
-                    <h6 class="comment-name by-author"><a href="#">Mini mordekaiser</a></h6>
+                    <h6 class="comment-name by-author">
+                      <a href="#">Mini mordekaiser</a>
+                    </h6>
                     <span>hace 20 minutos</span>
                     <i class="fa fa-reply"></i>
                     <i class="fa fa-heart"></i>
                   </div>
                   <div class="comment-content">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit omnis animi et iure laudantium vitae, praesentium optio, sapiente distinctio illo?
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Velit omnis animi et iure laudantium vitae, praesentium
+                    optio, sapiente distinctio illo?
                   </div>
                 </div>
               </div>
@@ -80,7 +88,9 @@
               <ul class="comments-list reply-list">
                 <li>
                   <!-- Avatar -->
-                  <div class="comment-avatar"><img src="./img/comments/baki-hanma.jpg" alt="Baki Hanma"></div>
+                  <div class="comment-avatar">
+                    <img src="./img/comments/baki-hanma.jpg" alt="Baki Hanma" />
+                  </div>
                   <!-- Contenedor del Comentario -->
                   <div class="comment-box">
                     <div class="comment-head">
@@ -90,34 +100,47 @@
                       <i class="fa fa-heart"></i>
                     </div>
                     <div class="comment-content">
-                      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit omnis animi et iure laudantium vitae, praesentium optio, sapiente distinctio illo?
+                      Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                      Velit omnis animi et iure laudantium vitae, praesentium
+                      optio, sapiente distinctio illo?
                     </div>
                   </div>
                 </li>
-      
+
                 <li>
                   <!-- Avatar -->
-                  <div class="comment-avatar"><img src="./img/comments/mordekaiser-chibi.webp" alt="Mordekaiser chibi"></div>
+                  <div class="comment-avatar">
+                    <img
+                      src="./img/comments/mordekaiser-chibi.webp"
+                      alt="Mordekaiser chibi"
+                    />
+                  </div>
                   <!-- Contenedor del Comentario -->
                   <div class="comment-box">
                     <div class="comment-head">
-                      <h6 class="comment-name by-author"><a href="#">Mini mordekaier</a></h6>
+                      <h6 class="comment-name by-author">
+                        <a href="#">Mini mordekaier</a>
+                      </h6>
                       <span>hace 10 minutos</span>
                       <i class="fa fa-reply"></i>
                       <i class="fa fa-heart"></i>
                     </div>
                     <div class="comment-content">
-                      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit omnis animi et iure laudantium vitae, praesentium optio, sapiente distinctio illo?
+                      Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                      Velit omnis animi et iure laudantium vitae, praesentium
+                      optio, sapiente distinctio illo?
                     </div>
                   </div>
                 </li>
               </ul>
             </li>
-      
+
             <li>
               <div class="comment-main-level">
                 <!-- Avatar -->
-                <div class="comment-avatar"><img src="./img/comments/baki-hanma.jpg" alt="Baki Hanma"></div>
+                <div class="comment-avatar">
+                  <img src="./img/comments/baki-hanma.jpg" alt="Baki Hanma" />
+                </div>
                 <!-- Contenedor del Comentario -->
                 <div class="comment-box">
                   <div class="comment-head">
@@ -127,7 +150,9 @@
                     <i class="fa fa-heart"></i>
                   </div>
                   <div class="comment-content">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit omnis animi et iure laudantium vitae, praesentium optio, sapiente distinctio illo?
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Velit omnis animi et iure laudantium vitae, praesentium
+                    optio, sapiente distinctio illo?
                   </div>
                 </div>
               </div>
@@ -138,81 +163,170 @@
 
       <section id="top_mejores_juegos">
         <h1>Mejores juegos de hoy y siempre</h1>
-          <div class="table-header">           
-            <div class="input-group">
-              <input type="search" placeholder="Search Data..." />
-              <img src="./img/search.png" alt="Search" />
-            </div>
+        <div class="table-header">
+          <div class="input-group">
+            <input type="search" placeholder="Search Data..." />
+            <img src="./img/search.png" alt="Search" />
           </div>
-          <section id="table-body">
-            <table>
-              <thead>
-                <tr>
-                  <th>ID <span class="icon-arrow">&UpArrow;</span></th>
-                  <th>Juego <span class="icon-arrow">&UpArrow;</span></th>
-                  <th>Nombre<span class="icon-arrow">&UpArrow;</span></th>
-                  <th>Año<span class="icon-arrow">&UpArrow;</span></th>
-                  <th>Rating</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td>1</td>
-                  <td>
-                    <img src="./img/Juegos/The legend of zelda ocarina of time.webp" alt="Logo control" />
-                  </td>
-                  <td>The legend of zelda: ocarina of time</td>
-                  <td>21 Nov, 1998</td>
-                  <td><span class="star"><strong>&#9733;&#9733;&#9733;&#9733;&#9733;</strong></span></td>
-                </tr>
-                <tr>
-                  <td>2</td>
-                  <td><img src="./img/Juegos/Tony hawk pro skater 2.webp" alt="" /></td>
-                  <td>Tony hawk pro skater 2</td>
-                  <td>19 Sep, 2000</td>
-                  <td><span class="star"><strong>&#9733;&#9733;&#9733;&#9733;&#9733;</strong></span></td>
-                </tr>
-                <tr>
-                  <td>3</td>
-                  <td><img src="./img/Juegos/gta 4.webp" alt="" /></td>
-                  <td>Grand theft auto IV</td>
-                  <td>2 Dec, 2008</td>
-                  <td><span class="star"><strong>&#9733;&#9733;&#9733;&#9733;&#9734;</strong></span></td>
-                </tr>
-                <tr>
-                  <td>4</td>
-                  <td><img src="./img/Juegos/super mario galaxy.webp" alt="" /></td>
-                  <td>Super mario galaxy</td>
-                  <td>12 Nov, 2007</td>
-                  <td><span class="star"><strong>&#9733;&#9733;&#9733;&#9733;&#9734;</strong></span></td>
-                </tr>
-                <tr>
-                  <td>5</td>
-                  <td><img src="./img/Juegos/Red dead redemption 2.jpg" alt="" /></td>
-                  <td>Red dead redemption 2</td>
-                  <td>26 Oct, 2018</td>
-                  <td><span class="star"><strong>&#9733;&#9733;&#9733;&#9733;&#9733;</strong></span></td>
-                </tr>
-              </tbody>
-            </table>
-          </section>
+        </div>
+        <section id="table-body">
+          <table>
+            <thead>
+              <tr>
+                <th>ID <span class="icon-arrow">&UpArrow;</span></th>
+                <th>Juego <span class="icon-arrow">&UpArrow;</span></th>
+                <th>Nombre<span class="icon-arrow">&UpArrow;</span></th>
+                <th>Año<span class="icon-arrow">&UpArrow;</span></th>
+                <th>Rating</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>1</td>
+                <td>
+                  <img
+                    src="./img/Juegos/The legend of zelda ocarina of time.webp"
+                    alt="Logo control"
+                  />
+                </td>
+                <td>The legend of zelda: ocarina of time</td>
+                <td>21 Nov, 1998</td>
+                <td>
+                  <span class="star"
+                    ><strong>&#9733;&#9733;&#9733;&#9733;&#9733;</strong></span
+                  >
+                </td>
+              </tr>
+              <tr>
+                <td>2</td>
+                <td>
+                  <img src="./img/Juegos/Tony hawk pro skater 2.webp" alt="" />
+                </td>
+                <td>Tony hawk pro skater 2</td>
+                <td>19 Sep, 2000</td>
+                <td>
+                  <span class="star"
+                    ><strong>&#9733;&#9733;&#9733;&#9733;&#9733;</strong></span
+                  >
+                </td>
+              </tr>
+              <tr>
+                <td>3</td>
+                <td><img src="./img/Juegos/gta 4.webp" alt="" /></td>
+                <td>Grand theft auto IV</td>
+                <td>2 Dec, 2008</td>
+                <td>
+                  <span class="star"
+                    ><strong>&#9733;&#9733;&#9733;&#9733;&#9734;</strong></span
+                  >
+                </td>
+              </tr>
+              <tr>
+                <td>4</td>
+                <td>
+                  <img src="./img/Juegos/super mario galaxy.webp" alt="" />
+                </td>
+                <td>Super mario galaxy</td>
+                <td>12 Nov, 2007</td>
+                <td>
+                  <span class="star"
+                    ><strong>&#9733;&#9733;&#9733;&#9733;&#9734;</strong></span
+                  >
+                </td>
+              </tr>
+              <tr>
+                <td>5</td>
+                <td>
+                  <img src="./img/Juegos/Red dead redemption 2.jpg" alt="" />
+                </td>
+                <td>Red dead redemption 2</td>
+                <td>26 Oct, 2018</td>
+                <td>
+                  <span class="star"
+                    ><strong>&#9733;&#9733;&#9733;&#9733;&#9733;</strong></span
+                  >
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </section>
       </section>
 
       <section id="proximos_eventos">
         <h1>Proximos eventos y torneos</h1>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum
-          recusandae sapiente deleniti? Recusandae, totam sit odit molestias
-          commodi excepturi, harum ullam omnis molestiae in placeat culpa,
-          eveniet cumque vero consectetur? Consequat nostrud nisi ut consequat
-          magna id consectetur et minim ex proident cillum. Laboris quis enim
-          mollit nisi officia nostrud fugiat incididunt Lorem laboris ex. Nulla
-          excepteur anim et irure dolor exercitation anim eu mollit eu
-          exercitation ullamco sint. Voluptate ut sunt eiusmod do deserunt sint
-          voluptate id eu. Dolore in aute laboris duis aliqua magna aliqua
-          cupidatat tempor voluptate laborum occaecat qui. Commodo aute
-          adipisicing proident officia sint minim et irure
-        </p>
+        <div class="card-container">
+          <div class="card">
+            <img src="./img/eventos/gamescon.jpeg" alt="Gamescom" />
+            <h3>Gamescom 2023</h3>
+            <p>
+              Descripción de la casa modelo 1. Puedes incluir detalles como
+              tamaño, habitaciones, características, etc.
+            </p>
+            <button class="btn" id="btn-modelo-1">Ver Detalle</button>
+          </div>
+
+          <div class="card">
+            <img
+              src="./img/eventos/the-game-awards.jpg"
+              alt="The Game Awards"
+            />
+            <h3>The Game Awards 2023</h3>
+            <p>
+              Descripción de la casa modelo 2. Puedes incluir detalles como
+              tamaño, habitaciones, características, etc.
+            </p>
+            <button class="btn" id="btn-modelo-2">Ver Detalle</button>
+          </div>
+
+          <div class="card">
+            <img
+              src="./img/eventos/tokyo-game-show.webp"
+              alt="Tokyo Game Show"
+            />
+            <h3>Tokyo Game Show</h3>
+            <p>
+              Descripción de la casa modelo 3. Puedes incluir detalles como
+              tamaño, habitaciones, características, etc.
+            </p>
+            <button class="btn" id="btn-modelo-3">Ver Detalle</button>
+          </div>
+
+          <div class="card">
+            <img
+              src="./img/eventos/valorant-champions-2023.jpeg"
+              alt="Valorant Champions 2023"
+            />
+            <h3>Valorant Champions</h3>
+            <p>
+              Descripción de la casa modelo 3. Puedes incluir detalles como
+              tamaño, habitaciones, características, etc.
+            </p>
+            <button class="btn" id="btn-modelo-3">Ver Detalle</button>
+          </div>
+
+          <div class="card">
+            <img
+              src="./img/eventos/worlds-lol.jpg"
+              alt="Worlds League of Legends"
+            />
+            <h3>Worlds League of Legends</h3>
+            <p>
+              Descripción de la casa modelo 3. Puedes incluir detalles como
+              tamaño, habitaciones, características, etc.
+            </p>
+            <button class="btn" id="btn-modelo-3">Ver Detalle</button>
+          </div>
+
+          <div class="card">
+            <img src="./img/eventos/xbox-showcase.jpg" alt="Xbox Showcase" />
+            <h3>Xbox Showcase 2023</h3>
+            <p>
+              Descripción de la casa modelo 3. Puedes incluir detalles como
+              tamaño, habitaciones, características, etc.
+            </p>
+            <button class="btn" id="btn-modelo-3">Ver Detalle</button>
+          </div>
+        </div>
       </section>
     </main>
 
@@ -235,7 +349,6 @@
         <a href="#"><i class="fa-brands fa-instagram"></i></a>
         <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
       </div>
-
     </footer>
 
     <button id="btn-ir-arriba">
