Ej3 Responsive y navbar

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" type="text/css" href="./css/style.css" />
-    <script src="./js/main.js"></script>
+    <script src="./js/main.js" defer></script>
     <title>Play & Win</title>
   </head>
   <body>
@@ -25,11 +25,12 @@
       </a>
 
       <nav>
-        <ul>
-          <li><a href="#reseñas">Reseñas</a></li>
-          <li><a href="#top_mejores_juegos">Top de los mejores juegos</a></li>
-          <li><a href="#proximos_eventos">Proximos eventos</a></li>
-        </ul>
+          <ul class="nav-links">
+            <li><a href="#reseñas">Reseñas</a></li>
+            <li><a href="#top_mejores_juegos">Top de los mejores juegos</a></li>
+            <li><a href="#proximos_eventos">Proximos eventos</a></li>
+          </ul>
+          <div class="hamburguer">&#9776;</div>
       </nav>
 
       <a id="contacto">
